--- a/src/main/java/view/LancamentoHora.fxml
+++ b/src/main/java/view/LancamentoHora.fxml
@@ -42,26 +42,31 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="609.0" prefWidth="944.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="api_pixel.LancamentoHora">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="609.0" prefWidth="944.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.LancamentoHoraController">
   <children>
-    <SplitPane centerShape="false" dividerPositions="0.2505567928730512" focusTraversable="true" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
+    <SplitPane centerShape="false" dividerPositions="0.2505567928730512" focusTraversable="true" prefHeight="-1.0" prefWidth="-1.0" styleClass="window" VBox.vgrow="ALWAYS">
       <items>
-        <AnchorPane maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="108.0" style="-fx-background-color: #1F25C1;" SplitPane.resizableWithParent="false" />
+        <AnchorPane maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="521.0" prefWidth="108.0" styleClass="sidebar" SplitPane.resizableWithParent="false" />
         <ScrollPane prefHeight="-1.0" prefWidth="-1.0" SplitPane.resizableWithParent="false">
           <content>
-            <AnchorPane id="Content" prefHeight="604.0" prefWidth="827.0" style="-fx-background-color: white;">
+            <AnchorPane id="Content" styleClass="content">
               <children>
-                        <TableView fx:id="table_lancamento" layoutX="36.0" layoutY="190.0" prefHeight="225.0" prefWidth="756.0">
+                        <TableView fx:id="table_lancamento" layoutX="35.0" layoutY="185.0" prefHeight="225.0" prefWidth="760.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="25.0">
                           <columns>
-                            <TableColumn editable="false" prefWidth="75.0" styleClass="rp-column" text="Projeto" />
+                            <TableColumn fx:id="col_projeto" prefWidth="75.0" styleClass="rp-column" text="Projeto" />
+                              <TableColumn fx:id="col_cr" prefWidth="75.0" styleClass="rp-column" text="CR" />
+                              <TableColumn fx:id="col_modalidade" prefWidth="75.0" styleClass="rp-column" text="Modalidade" />
+                              <TableColumn fx:id="col_inicio" prefWidth="75.0" styleClass="rp-column" text="Inicio" />
+                              <TableColumn fx:id="col_fim" prefWidth="75.0" styleClass="rp-column" text="Fim" />
+                              <TableColumn fx:id="col_motivo" prefWidth="75.0" styleClass="rp-column" text="Motivo" />
+                              <TableColumn fx:id="col_acoes" prefWidth="75.0" styleClass="rp-column" text="Ações" />
                           </columns>
                            <columnResizePolicy>
                               <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                            </columnResizePolicy>
                         </TableView>
                         <Button fx:id="btn_lancar" layoutX="242.0" layoutY="451.0" mnemonicParsing="false" onAction="#lancarHoras" text="Lançar" />
-                        <Button layoutX="479.0" layoutY="451.0" mnemonicParsing="false" text="Editar" />
-                        <Label layoutX="41.0" layoutY="29.0" style="-fx-background-color: white;" text="Lançamento de Horas Extras" textFill="#1f25c1">
+                        <Label layoutX="41.0" layoutY="29.0" styleClass="title" text="Lançamento de Horas Extras" textFill="#1f25c1">
                            <font>
                               <Font name="Calibri Bold" size="24.0" />
                            </font>
