--- a/src/main/java/view/LancamentoHora.fxml
+++ b/src/main/java/view/LancamentoHora.fxml
@@ -33,6 +33,7 @@
 -->
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.SplitPane?>
@@ -51,7 +52,7 @@
           <content>
             <AnchorPane id="Content" styleClass="content">
               <children>
-                        <TableView fx:id="table_lancamento" layoutX="35.0" layoutY="185.0" prefHeight="225.0" prefWidth="760.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="25.0">
+                        <TableView fx:id="table_lancamento" layoutX="35.0" layoutY="185.0" onMouseClicked="#criarNovaCelula" prefHeight="225.0" prefWidth="760.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="25.0">
                           <columns>
                             <TableColumn fx:id="col_projeto" prefWidth="75.0" styleClass="rp-column" text="Projeto" />
                               <TableColumn fx:id="col_cr" prefWidth="75.0" styleClass="rp-column" text="CR" />
@@ -77,5 +78,6 @@
         </ScrollPane>
       </items>
     </SplitPane>
+      <CheckBox mnemonicParsing="false" text="CheckBox" />
   </children>
 </VBox>
