finalizando tela de cadastrousuario

--- a/src/main/java/view/stylesCadastroUsuario.css
+++ b/src/main/java/view/stylesCadastroUsuario.css
@@ -1,3 +1,16 @@
+.myButton {
+    -fx-background-color: #007bff;
+    -fx-text-fill: white;
+    -fx-font-size: 16px;
+    -fx-padding: 10px 20px;
+    -fx-effect: dropshadow(gaussian, rgba(245, 245, 245, 0.966), 10, 0, 0, 1);
+    -fx-transition: all 0.3s ease;
+}
+
+.myButton:hover {
+    -fx-background-color: #0062cc;
+    -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.4), 10, 0, 0, 2);
+}
 .window{
     -fx-min-width:944px;
     -fx-min-height:595px;
