--- a/src/main/java/view/CadastroUsuario.fxml
+++ b/src/main/java/view/CadastroUsuario.fxml
@@ -32,9 +32,8 @@
   OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
 
-<?import javafx.geometry.Rectangle2D?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -45,54 +44,46 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="780.0" prefWidth="866.0" style="-fx-background-color: ffffff;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.CadastroUsuarioController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="656.0" prefWidth="1186.0" style="-fx-background-color: ffffff;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.CadastroUsuarioController">
   <children>
-<AnchorPane id="Content" prefHeight="745.0" prefWidth="771.0" style="-fx-background-color: ffffff;" styleClass="content">
+<AnchorPane id="Content" prefHeight="760.0" prefWidth="1204.0" style="-fx-background-color: ffffff;" styleClass="content" stylesheets="@stylesCadastroUsuario.css">
   <children>
-            <Button fx:id="btn_cadastrar" layoutX="523.0" layoutY="566.0" mnemonicParsing="false" onAction="#cadastrarUsuario" prefHeight="44.0" prefWidth="175.0" style="-fx-background-color: #1f25c1; -fx-background-radius: 50px;" text="Cadastrar" textAlignment="CENTER" textFill="WHITE">
+            <Button fx:id="btn_cadastrar" layoutX="756.0" layoutY="582.0" mnemonicParsing="false" onAction="#cadastrarUsuario" prefHeight="45.0" prefWidth="208.0" style="-fx-background-color: #1f25c1; -fx-background-radius: 50px;" styleClass="myButton" text="Cadastrar" textAlignment="CENTER" textFill="WHITE">
                <font>
                   <Font size="14.0" />
                </font>
             </Button>
-            <Label layoutX="431.0" layoutY="90.0" styleClass="title" text="Informe seus dados de cadastro" textFill="#1f25c1" AnchorPane.bottomAnchor="662.0" AnchorPane.leftAnchor="431.0" AnchorPane.rightAnchor="-49.0" AnchorPane.topAnchor="90.0">
-               <font>
-                  <Font name="Calibri Bold" size="24.0" />
-               </font>
-            </Label>
             <HBox alignment="CENTER" layoutX="152.0" layoutY="216.0" />
-            <TextField layoutX="402.0" layoutY="256.0" prefHeight="45.0" prefWidth="417.0" promptText="  E-mail" style="-fx-background-radius: 15px; -fx-background-color: f5f0f0;" />
-            <TextField layoutX="402.0" layoutY="344.0" prefHeight="45.0" prefWidth="164.0" promptText="  CPF" style="-fx-background-radius: 15px; -fx-background-color: f5f0f0;" />
-            <TextField accessibleRole="PASSWORD_FIELD" layoutX="402.0" layoutY="440.0" prefHeight="45.0" prefWidth="164.0" promptText="  Senha" style="-fx-background-radius: 15px; -fx-background-color: f5f0f0;" />
-            <TextField layoutX="657.0" layoutY="345.0" prefHeight="45.0" prefWidth="164.0" promptText="  Tel" style="-fx-background-radius: 15px; -fx-background-color: f5f0f0;" />
-            <TextField layoutX="402.0" layoutY="165.0" opacity="0.85" prefHeight="45.0" prefWidth="417.0" promptText="  Nome" style="-fx-background-radius: 15px; -fx-background-color: f5f0f0;" />
-               <ImageView fitHeight="99.0" fitWidth="200.0" layoutX="70.0" layoutY="49.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../../../assets/logo2rp.png" />
-               </image>
-            </ImageView>
+            <TextField layoutX="581.0" layoutY="267.0" prefHeight="45.0" prefWidth="570.0" promptText="  E-mail" style="-fx-background-radius: 15px; -fx-background-color: f5f0f0;" />
+            <TextField layoutX="581.0" layoutY="349.0" prefHeight="45.0" prefWidth="223.0" promptText="  CPF" style="-fx-background-radius: 15px; -fx-background-color: f5f0f0;" />
+            <TextField layoutX="928.0" layoutY="349.0" prefHeight="45.0" prefWidth="223.0" promptText="  Tel" style="-fx-background-radius: 15px; -fx-background-color: f5f0f0;" />
+            <TextField layoutX="581.0" layoutY="171.0" opacity="0.85" prefHeight="45.0" prefWidth="570.0" promptText="  Nome" style="-fx-background-radius: 15px; -fx-background-color: f5f0f0;" />
            
             <BorderPane prefHeight="780.0" prefWidth="315.0">
                <left>
-                  <AnchorPane prefHeight="780.0" prefWidth="315.0" style="-fx-background-color: #1f25c1;" BorderPane.alignment="CENTER">
+                  <AnchorPane prefHeight="710.0" prefWidth="393.0" style="-fx-background-color: #1f25c1;" BorderPane.alignment="CENTER">
                      <children>
-                        <Text fill="WHITE" layoutX="58.0" layoutY="317.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Bem vindo a tela de cadastro de usuario" textAlignment="CENTER" wrappingWidth="276.0">
-                           <font>
-                              <Font size="36.0" />
-                           </font>
-                        </Text>
-                        <BorderPane layoutX="49.0" layoutY="75.0" />
-                        <ImageView fitHeight="169.0" fitWidth="303.0" layoutX="58.0" layoutY="50.0">
+                        <ImageView fitHeight="99.0" fitWidth="200.0" layoutX="77.0" layoutY="52.0">
                            <image>
                               <Image url="@../../../../assets/logo2rp.png" />
                            </image>
-                           <viewport>
-                              <Rectangle2D height="20.0" />
-                           </viewport>
                         </ImageView>
+                        <Text fill="WHITE" layoutX="59.0" layoutY="208.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-weight: bold;" text="Bem vindo a tela de cadastro de usuario" textAlignment="CENTER" wrappingWidth="276.0">
+                           <font>
+                              <Font size="30.0" />
+                           </font>
+                        </Text>
+                        <BorderPane layoutX="49.0" layoutY="75.0" />
                      </children>
                   </AnchorPane>
                </left>
             </BorderPane>
+            <Text fill="#2247ff" layoutX="712.0" layoutY="107.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-weight: bold;" text="Informe seus dados de cadastros" textAlignment="CENTER">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Text>
+            <PasswordField layoutX="581.0" layoutY="444.0" prefHeight="45.0" prefWidth="223.0" promptText=" Senha" style="-fx-background-color: f5f0f0; -fx-background-radius: 15px;" />
   </children>
 </AnchorPane>
   </children>
