--- a/src/main/java/view/CadastroUsuario.fxml
+++ b/src/main/java/view/CadastroUsuario.fxml
@@ -63,17 +63,18 @@
                <left>
                   <AnchorPane prefHeight="710.0" prefWidth="393.0" style="-fx-background-color: #1f25c1;" BorderPane.alignment="CENTER">
                      <children>
-                        <ImageView fitHeight="99.0" fitWidth="200.0" layoutX="77.0" layoutY="52.0">
-                           <image>
-                              <Image url="@../../../../assets/logo2rp.png" />
-                           </image>
-                        </ImageView>
                         <Text fill="WHITE" layoutX="59.0" layoutY="208.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-weight: bold;" text="Bem vindo a tela de cadastro de usuario" textAlignment="CENTER" wrappingWidth="276.0">
                            <font>
                               <Font size="30.0" />
                            </font>
                         </Text>
                         <BorderPane layoutX="49.0" layoutY="75.0" />
+                        <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="79.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
+                        <ImageView fitHeight="99.0" fitWidth="200.0" layoutX="79.0" layoutY="40.0">
+                           <image>
+                              <Image url="@logo2rp.png" />
+                           </image>
+                        </ImageView>
                      </children>
                   </AnchorPane>
                </left>
