--- a/src/main/java/view/LancamentoHora/LancamentoHora.fxml
+++ b/src/main/java/view/LancamentoHora/LancamentoHora.fxml
@@ -33,7 +33,6 @@
 -->
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.SplitPane?>
@@ -43,7 +42,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="609.0" prefWidth="944.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.LancamentoHoraController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="609.0" prefWidth="944.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.LancamentoHora.LancamentoHoraController">
   <children>
     <SplitPane centerShape="false" dividerPositions="0.2505567928730512" focusTraversable="true" prefHeight="-1.0" prefWidth="-1.0" styleClass="window" VBox.vgrow="ALWAYS">
       <items>
@@ -52,7 +51,7 @@
           <content>
             <AnchorPane id="Content" styleClass="content">
               <children>
-                        <TableView fx:id="table_lancamento" layoutX="35.0" layoutY="185.0" onMouseClicked="#criarNovaLinha" prefHeight="225.0" prefWidth="760.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="25.0">
+                        <TableView fx:id="table_lancamento" editable="true" layoutX="35.0" layoutY="185.0" onMouseClicked="#criarNovaLinha" prefHeight="225.0" prefWidth="760.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="25.0">
                           <columns>
                               <TableColumn fx:id="col_id" prefWidth="75.0" styleClass="rp-column" text="Id" visible="false" />
                             <TableColumn fx:id="col_projeto" prefWidth="75.0" styleClass="rp-column" text="Projeto" />
@@ -79,6 +78,5 @@
         </ScrollPane>
       </items>
     </SplitPane>
-      <CheckBox mnemonicParsing="false" text="CheckBox" />
   </children>
 </VBox>
