--- a/src/main/java/view/LancamentoHora/LancamentoHora.fxml
+++ b/src/main/java/view/LancamentoHora/LancamentoHora.fxml
@@ -32,46 +32,74 @@
   OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
 
+<?import java.lang.String?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="609.0" prefWidth="944.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.LancamentoHora.LancamentoHoraController">
   <children>
-    <SplitPane centerShape="false" dividerPositions="0.2505567928730512" focusTraversable="true" prefHeight="-1.0" prefWidth="-1.0" styleClass="window" VBox.vgrow="ALWAYS">
+    <SplitPane centerShape="false" dividerPositions="0.11587436332767402" focusTraversable="true" prefHeight="-1.0" prefWidth="-1.0" styleClass="window" VBox.vgrow="ALWAYS">
       <items>
-        <AnchorPane maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="521.0" prefWidth="108.0" styleClass="sidebar" SplitPane.resizableWithParent="false" />
+        <AnchorPane maxWidth="-Infinity" minHeight="580.0" minWidth="-Infinity" prefHeight="580.0" prefWidth="132.0" styleClass="sidebar" SplitPane.resizableWithParent="false">
+               <children>
+                  <ImageView fitHeight="52.0" fitWidth="93.0" layoutX="9.0" layoutY="41.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../figma/2rp.png" />
+                     </image>
+                  </ImageView>
+                  <Button layoutX="28.0" layoutY="542.0" minWidth="46.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="46.0" scaleX="0.5" scaleY="0.5" styleClass="rp-column" text="Button" />
+                  <ImageView fitHeight="40.0" fitWidth="43.0" layoutX="36.0" layoutY="541.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../figma/log.png" />
+                     </image>
+                  </ImageView>
+               </children></AnchorPane>
         <ScrollPane prefHeight="-1.0" prefWidth="-1.0" SplitPane.resizableWithParent="false">
           <content>
-            <AnchorPane id="Content" styleClass="content">
+            <AnchorPane id="Content" minHeight="578.0" minWidth="810.0" prefHeight="606.0" prefWidth="870.0" styleClass="content">
               <children>
-                        <TableView fx:id="table_lancamento" editable="true" layoutX="35.0" layoutY="185.0" onMouseClicked="#criarNovaLinha" prefHeight="225.0" prefWidth="760.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="25.0">
+                        <TableView fx:id="table_lancamento" centerShape="false" layoutX="17.0" layoutY="194.0" prefHeight="225.0" prefWidth="760.0" AnchorPane.leftAnchor="17.0" AnchorPane.rightAnchor="18.0">
                           <columns>
-                              <TableColumn fx:id="col_id" prefWidth="75.0" styleClass="rp-column" text="Id" visible="false" />
-                            <TableColumn fx:id="col_projeto" prefWidth="75.0" styleClass="rp-column" text="Projeto" />
-                              <TableColumn fx:id="col_cr" prefWidth="75.0" styleClass="rp-column" text="CR" />
-                              <TableColumn fx:id="col_modalidade" prefWidth="75.0" styleClass="rp-column" text="Modalidade" />
-                              <TableColumn fx:id="col_inicio" prefWidth="75.0" styleClass="rp-column" text="Inicio" />
+                              <TableColumn fx:id="col_cr" prefWidth="93.6000394821167" text="CR">
+                                 <styleClass>
+                                    <String fx:value="rp-column" />
+                                    <String fx:value="window" />
+                                    <String fx:value="rp-column" />
+                                 </styleClass>
+                              </TableColumn>
+                              <TableColumn fx:id="col_modalidade" prefWidth="138.3999786376953" styleClass="rp-column" text="Modalidade" />
+                              <TableColumn fx:id="col_inicio" prefWidth="111.20001220703125" styleClass="rp-column" text="Inicio" />
                               <TableColumn fx:id="col_fim" prefWidth="75.0" styleClass="rp-column" text="Fim" />
                               <TableColumn fx:id="col_motivo" prefWidth="75.0" styleClass="rp-column" text="Motivo" />
                               <TableColumn fx:id="col_acoes" prefWidth="75.0" styleClass="rp-column" text="Ações" />
+                            <TableColumn fx:id="col_projeto" prefWidth="75.0" styleClass="rp-column" text="Projeto" />
+                              <TableColumn fx:id="col_id" editable="false" prefWidth="93.6000394821167" text="ID" visible="false">
+                                 <styleClass>
+                                    <String fx:value="rp-column" />
+                                    <String fx:value="window" />
+                                    <String fx:value="rp-column" />
+                                 </styleClass>
+                              </TableColumn>
                           </columns>
                            <columnResizePolicy>
                               <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                            </columnResizePolicy>
                         </TableView>
-                        <Button fx:id="btn_lancar" layoutX="242.0" layoutY="451.0" mnemonicParsing="false" onAction="#lancarHoras" text="Lançar" />
                         <Label layoutX="41.0" layoutY="29.0" styleClass="title" text="Lançamento de Horas Extras" textFill="#1f25c1">
                            <font>
                               <Font name="Calibri Bold" size="24.0" />
                            </font>
                         </Label>
+                        <Button fx:id="btn_lancar" layoutX="41.0" layoutY="432.0" mnemonicParsing="false" onAction="#lancarHoras" text="Lançar" />
               </children>
             </AnchorPane>
           </content>
