--- a/src/main/java/view/styles.css
+++ b/src/main/java/view/styles.css
@@ -21,6 +21,6 @@
 }
 
 .rp-column {
-    /* -fx-background-color:#3c80b8;
-    -fx-text-background-color:white;  */
+    /*-fx-background-color:#98c5e993;
+    -fx-text-background-color:white; */ 
 }
