--- a/src/main/java/view/Menu/Menu.fxml
+++ b/src/main/java/view/Menu/Menu.fxml
@@ -53,13 +53,13 @@
                <children>
                   <ImageView fitHeight="52.0" fitWidth="93.0" layoutX="9.0" layoutY="41.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../../_source/fatec/api/src/main/java/view/figma/2rp.png" />
+                        <Image url="@../figma/2rp.png" />
                      </image>
                   </ImageView>
                   <Button layoutX="28.0" layoutY="542.0" minWidth="46.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="46.0" scaleX="0.5" scaleY="0.5" styleClass="rp-column" text="Button" />
                   <ImageView fitHeight="40.0" fitWidth="43.0" layoutX="36.0" layoutY="541.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../../_source/fatec/api/src/main/java/view/figma/log.png" />
+                        <Image url="@../figma/log.png" />
                      </image>
                   </ImageView>
                </children></AnchorPane>
@@ -77,9 +77,9 @@
                               <Image url="@../assets/Usuario.png" />
                            </image>
                         </ImageView>
-                        <Group layoutX="41.0" layoutY="258.0" AnchorPane.leftAnchor="41.0">
+                        <Group layoutX="41.0" layoutY="258.0" onMouseClicked="#irControleUsuario" AnchorPane.leftAnchor="41.0">
                            <children>
-                              <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#2128bf1f" height="112.0" layoutY="-7.0" onMouseClicked="#irControleUsuario" stroke="BLACK" strokeType="INSIDE" style="-fx-border-radious: 10px;" width="192.0" />
+                              <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#2128bf1f" height="112.0" layoutY="-7.0" stroke="BLACK" strokeType="INSIDE" style="-fx-border-radious: 10px;" width="192.0" />
                               <ImageView fitHeight="54.0" fitWidth="65.0" layoutX="64.0" layoutY="22.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
                                     <Image url="@../assets/Grafico.png" />
@@ -95,9 +95,9 @@
                               <ColorAdjust contrast="1.0" hue="0.02" saturation="1.0" />
                            </effect>
                         </Group>
-                        <Group layoutX="309.0" layoutY="280.0" AnchorPane.leftAnchor="286.0" AnchorPane.topAnchor="251.0">
+                        <Group layoutX="309.0" layoutY="280.0" onMouseClicked="#irControleCr" AnchorPane.leftAnchor="286.0" AnchorPane.topAnchor="251.0">
                            <children>
-                              <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#2128bf1f" height="112.0" layoutY="-7.0" onMouseClicked="#irControleCr" stroke="BLACK" strokeType="INSIDE" width="192.0" />
+                              <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#2128bf1f" height="112.0" layoutY="-7.0" stroke="BLACK" strokeType="INSIDE" width="192.0" />
                               <ImageView fitHeight="54.0" fitWidth="65.0" layoutX="64.0" layoutY="22.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
                                     <Image url="@../assets/Grafico.png" />
@@ -113,9 +113,9 @@
                               <ColorAdjust contrast="1.0" hue="0.02" saturation="1.0" />
                            </effect>
                         </Group>
-                        <Group layoutX="531.0" layoutY="258.0">
+                        <Group layoutX="531.0" layoutY="258.0" onMouseClicked="#irLancamentoHora">
                            <children>
-                              <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#2128bf1f" height="112.0" layoutY="-7.0" onMouseClicked="#irLancamentoHora" stroke="BLACK" strokeType="INSIDE" width="192.0" />
+                              <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#2128bf1f" height="112.0" layoutY="-7.0" stroke="BLACK" strokeType="INSIDE" width="192.0" />
                               <ImageView fitHeight="54.0" fitWidth="65.0" layoutX="64.0" layoutY="22.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
                                     <Image url="@../assets/Grafico.png" />
