--- a/src/main/java/view/CadastroCliente.fxml
+++ b/src/main/java/view/CadastroCliente.fxml
@@ -3,13 +3,27 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="609.0" prefWidth="944.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.CadastroClienteController">
    <children>
-      <Pane layoutY="-5.0" prefHeight="615.0" prefWidth="133.0" style="-fx-background-color: #4863A0;" />
+      <Pane layoutY="-5.0" prefHeight="615.0" prefWidth="141.0" style="-fx-background-color: #4863A0;">
+         <children>
+            <ImageView fitHeight="52.0" fitWidth="93.0" layoutX="24.0" layoutY="31.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@figma/2rp.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="40.0" fitWidth="43.0" layoutX="41.0" layoutY="542.0" onMouseClicked="#retornarMenu" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@figma/log.png" />
+               </image>
+            </ImageView>
+         </children></Pane>
       <Label layoutX="423.0" layoutY="14.0" prefHeight="39.0" prefWidth="272.0" text="Cadastro de Cliente" textFill="#483fee">
          <font>
             <Font size="27.0" />
