--- a/src/main/java/view/VisualizacaoCR.fxml
+++ b/src/main/java/view/VisualizacaoCR.fxml
@@ -5,13 +5,27 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="609.0" prefWidth="944.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.VisualizarCRController">
    <children>
-      <Pane prefHeight="609.0" prefWidth="200.0" style="-fx-background-color: #4863A0;" />
+      <Pane prefHeight="609.0" prefWidth="200.0" style="-fx-background-color: #4863A0;">
+         <children>
+            <ImageView fitHeight="52.0" fitWidth="93.0" layoutX="54.0" layoutY="37.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@figma/2rp.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="40.0" fitWidth="43.0" layoutX="79.0" layoutY="523.0" onMouseClicked="#retornarMenu" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@figma/log.png" />
+               </image>
+            </ImageView>
+         </children></Pane>
       <Label layoutX="358.0" layoutY="60.0" text="CR">
          <font>
             <Font size="28.0" />
