--- a/src/main/java/view/GerenciamentoCRProjeto.fxml
+++ b/src/main/java/view/GerenciamentoCRProjeto.fxml
@@ -1,28 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="449.0" prefWidth="823.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.GerenciamentoCRProjetoController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="609.0" prefWidth="944.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.GerenciamentoCRProjetoController">
    <children>
-      <Pane layoutY="-5.0" prefHeight="455.0" prefWidth="133.0" style="-fx-background-color: #4863A0;" />
-      <Label layoutX="224.0" layoutY="21.0" prefHeight="39.0" prefWidth="431.0" text="Gerenciamento de CR e Projeto" textFill="#483fee">
+      <Pane layoutY="-5.0" prefHeight="616.0" prefWidth="123.0" style="-fx-background-color: #4863A0;" />
+      <Label layoutX="410.0" layoutY="25.0" prefHeight="39.0" prefWidth="431.0" text="Gerenciamento de CR" textFill="#483fee">
          <font>
             <Font size="27.0" />
          </font>
       </Label>
-      <Button layoutX="421.0" layoutY="350.0" mnemonicParsing="false" onAction="#gerenciarCRProjeto" prefHeight="25.0" prefWidth="86.0" text="INSERIR" />
+      <Button layoutX="485.0" layoutY="347.0" mnemonicParsing="false" onAction="#gerenciarCRProjeto" prefHeight="25.0" prefWidth="86.0" text="INSERIR" />
       <ComboBox fx:id="comboSquads" layoutX="162.0" layoutY="166.0" prefWidth="150.0" />
-      <ComboBox fx:id="comboNomeUsuario" layoutX="621.0" layoutY="166.0" prefWidth="150.0" />
+      <ComboBox fx:id="comboNomeUsuario" layoutX="465.0" layoutY="166.0" prefWidth="150.0" />
       <Label layoutX="224.0" layoutY="137.0" text="Squads" />
-      <Label layoutX="641.0" layoutY="137.0" text="Nome do usuario" />
-      <TextField fx:id="txProjeto" layoutX="378.0" layoutY="166.0" />
-      <Text layoutX="441.0" layoutY="150.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Projeto" />
+      <Label layoutX="494.0" layoutY="137.0" text="Nome do usuario" />
+      <Label layoutX="779.0" layoutY="137.0" text="Temporário" />
+      <CheckBox fx:id="temporario" layoutX="789.0" layoutY="170.0" mnemonicParsing="false" text="Sim" />
    </children>
 </AnchorPane>
