--- a/src/main/java/view/CadastroCR.fxml
+++ b/src/main/java/view/CadastroCR.fxml
@@ -9,16 +9,17 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="609.0" prefWidth="944.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.CadastroCRController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="609.0" prefWidth="944.0" style="-fx-background-color: fffff;" styleClass="sidebar" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.CadastroCRController">
    <children>
-      <Pane layoutY="-5.0" prefHeight="616.0" prefWidth="133.0" style="-fx-background-color: #4863A0;">
+      <Pane layoutY="-5.0" prefHeight="616.0" prefWidth="113.0" styleClass="sidebar">
          <children>
-            <ImageView fitHeight="52.0" fitWidth="93.0" layoutX="20.0" layoutY="46.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="52.0" fitWidth="93.0" layoutX="14.0" layoutY="50.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@figma/2rp.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="40.0" fitWidth="43.0" layoutX="45.0" layoutY="536.0" onMouseClicked="#retornarMenu" pickOnBounds="true" preserveRatio="true">
+            <Button layoutX="29.0" layoutY="545.0" mnemonicParsing="false" scaleX="0.5" scaleY="0.5" text="Button" />
+            <ImageView fitHeight="40.0" fitWidth="43.0" layoutX="37.0" layoutY="540.0" onMouseClicked="#retornarMenu" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@figma/log.png" />
                </image>
@@ -33,7 +34,7 @@
       <Label layoutX="778.0" layoutY="91.0" prefHeight="17.0" prefWidth="37.0" text="Sigla" />
       <TextField fx:id="tfNome" layoutX="154.0" layoutY="129.0" prefHeight="25.0" prefWidth="120.0" />
       <TextField fx:id="tfSigla" layoutX="738.0" layoutY="129.0" prefHeight="25.0" prefWidth="127.0" />
-      <Button layoutX="463.0" layoutY="334.0" mnemonicParsing="false" onAction="#inserirCR" prefHeight="25.0" prefWidth="86.0" text="INSERIR" />
+      <Button layoutX="463.0" layoutY="327.0" mnemonicParsing="false" onAction="#inserirCR" prefHeight="33.0" prefWidth="82.0" text="INSERIR" />
       <TextField fx:id="tfCodigo" layoutX="446.0" layoutY="129.0" prefHeight="25.0" prefWidth="120.0" />
       <Label layoutX="480.0" layoutY="91.0" prefHeight="17.0" prefWidth="52.0" text="Código" />
    </children>
