--- a/src/main/java/view/CadastroCliente.fxml
+++ b/src/main/java/view/CadastroCliente.fxml
@@ -9,16 +9,17 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="609.0" prefWidth="944.0" styleClass="content" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.CadastroClienteController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="609.0" prefWidth="944.0" style="-fx-background-color: fffff;" styleClass="content" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.CadastroClienteController">
    <children>
-      <Pane layoutY="-5.0" prefHeight="615.0" prefWidth="141.0" styleClass="sidebar">
+      <Pane layoutY="-5.0" prefHeight="615.0" prefWidth="114.0" styleClass="sidebar">
          <children>
-            <ImageView fitHeight="52.0" fitWidth="93.0" layoutX="24.0" layoutY="31.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="52.0" fitWidth="93.0" layoutX="14.0" layoutY="43.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@figma/2rp.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="40.0" fitWidth="43.0" layoutX="41.0" layoutY="542.0" onMouseClicked="#retornarMenu" pickOnBounds="true" preserveRatio="true">
+            <Button layoutX="26.0" layoutY="538.0" mnemonicParsing="false" scaleX="0.5" scaleY="0.5" text="Button" />
+            <ImageView fitHeight="40.0" fitWidth="43.0" layoutX="34.0" layoutY="541.0" onMouseClicked="#retornarMenu" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@figma/log.png" />
                </image>
@@ -31,7 +32,7 @@
       </Label>
       <Label layoutX="268.0" layoutY="81.0" prefHeight="17.0" prefWidth="86.0" text="Razão Social" />
       <TextField fx:id="tfRazaoSocial" layoutX="252.0" layoutY="114.0" prefHeight="25.0" prefWidth="120.0" />
-      <Button layoutX="502.0" layoutY="345.0" mnemonicParsing="false" onAction="#cadastrarCliente" prefHeight="25.0" prefWidth="86.0" text="INSERIR" />
+      <Button layoutX="502.0" layoutY="339.0" mnemonicParsing="false" onAction="#cadastrarCliente" prefHeight="32.0" prefWidth="86.0" text="INSERIR" />
       <TextField fx:id="tfCNPJ" layoutX="639.0" layoutY="114.0" prefHeight="25.0" prefWidth="120.0" />
       <Label layoutX="673.0" layoutY="81.0" prefHeight="17.0" prefWidth="52.0" text="CNPJ" />
    </children>
