--- a/src/main/java/view/VisualizacaoCR.fxml
+++ b/src/main/java/view/VisualizacaoCR.fxml
@@ -11,27 +11,28 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="609.0" prefWidth="944.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.VisualizarCRController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="609.0" prefWidth="944.0" style="-fx-background-color: fffff;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.VisualizarCRController">
    <children>
-      <Pane prefHeight="609.0" prefWidth="200.0" style="-fx-background-color: #4863A0;">
+      <Pane minWidth="-Infinity" prefHeight="610.0" prefWidth="122.0" styleClass="sidebar">
          <children>
-            <ImageView fitHeight="52.0" fitWidth="93.0" layoutX="54.0" layoutY="37.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="52.0" fitWidth="93.0" layoutX="22.0" layoutY="35.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@figma/2rp.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="40.0" fitWidth="43.0" layoutX="79.0" layoutY="523.0" onMouseClicked="#retornarMenu" pickOnBounds="true" preserveRatio="true">
+            <Button layoutX="34.0" layoutY="538.0" mnemonicParsing="false" scaleX="0.5" scaleY="0.5" text="Button" />
+            <ImageView fitHeight="40.0" fitWidth="43.0" layoutX="42.0" layoutY="533.0" onMouseClicked="#retornarMenu" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@figma/log.png" />
                </image>
             </ImageView>
          </children></Pane>
-      <Label layoutX="358.0" layoutY="60.0" text="CR">
+      <Label layoutX="358.0" layoutY="60.0" text="CR" textFill="#1f25c1">
          <font>
             <Font size="28.0" />
          </font>
       </Label>
-      <Button layoutX="763.0" layoutY="67.0" mnemonicParsing="false" onAction="#buscar" prefHeight="25.0" prefWidth="89.0" text="BUSCAR" />
+      <Button layoutX="763.0" layoutY="67.0" mnemonicParsing="false" onAction="#buscar" prefHeight="28.0" prefWidth="90.0" text="BUSCAR" />
       <TableView fx:id="tabela" layoutX="355.0" layoutY="180.0" prefHeight="306.0" prefWidth="486.0">
         <columns>
           <TableColumn fx:id="integrantesCol" prefWidth="247.0" text="Integrantes" />
